--- a/vignettes/dataRetrieval.Rnw
+++ b/vignettes/dataRetrieval.Rnw
@@ -197,7 +197,7 @@ ChoptankInfo <- getSiteFileData(siteNumber)
 parameterCd <- "00060"
 
 #Raw daily data:
-rawDailyData <- retrieveNWISData(siteNumber,parameterCd,
+rawDailyData <- retrieveNWISdvData(siteNumber,parameterCd,
                       "1980-01-01","2010-01-01")
 # Data compiled for EGRET analysis
 Daily <- getDVData(siteNumber,parameterCd,
@@ -488,7 +488,7 @@ Note that time now becomes important, so the variable datetime is a POSIXct, and
 \subsection{Water Quality Values}
 \label{sec:usgsWQP}
 %------------------------------------------------------------
-To get USGS water quality data from water samples collected at the streamgage or other monitoring site (as distinct from unit values collected through some type of automatic monitor) we can use the function \texttt{retrieveNWISqwData}, with the input arguments: siteNumber, parameterCd, startDate, endDate, and interactive (similar to \texttt{retrieveUnitNWISData} and \texttt{retrieveNWISData}).
+To get USGS water quality data from water samples collected at the streamgage or other monitoring site (as distinct from unit values collected through some type of automatic monitor) we can use the function \texttt{retrieveNWISqwData}, with the input arguments: siteNumber, parameterCd, startDate, endDate, and interactive (similar to \texttt{retrieveNWISunitData} and \texttt{retrieveNWISdvData}).
 
 
 <<label=getQW, echo=TRUE>>=
@@ -622,7 +622,7 @@ Notice that the \enquote{Day of the year} column can span from 1 to 366. The 366
 \subsection{Sample Data}
 \label{Samplesubsection}
 %------------------------------------------------------------
-The \texttt{getSampleData} function retrieves USGS sample data from NWIS. The arguments for this function are also siteNumber, ParameterCd, StartDate, EndDate, interactive. These are the same inputs as \texttt{getRawQWData} or \texttt{getQWData} as described in the previous section.
+The \texttt{getSampleData} function retrieves USGS sample data from NWIS. The arguments for this function are also siteNumber, ParameterCd, StartDate, EndDate, interactive. These are the same inputs as \texttt{retrieveWQPqwData} or \texttt{getWQPData} as described in the previous section.
 
 <<secondExample>>=
 parameterCd <- "00618"
@@ -719,7 +719,7 @@ print(xTab,
 
 @
 
-The dataRetrieval package will \enquote{add up} all the values in a given row to form the total for that sample when using the Sample dataframe. Thus, you only want to enter data that should be added together. If you want a dataframe with multiple constituents that are not summed, do not use getSampleData, getSTORETSampleData, or getSampleDataFromFile. The raw data functions: \texttt{getWQPData}, \texttt{retrieveNWISqwData}, \texttt{getRawQWData}, \texttt{getQWData} will not sum constituents, but leave them in their individual columns. 
+The dataRetrieval package will \enquote{add up} all the values in a given row to form the total for that sample when using the Sample dataframe. Thus, you only want to enter data that should be added together. If you want a dataframe with multiple constituents that are not summed, do not use getSampleData, getSTORETSampleData, or getSampleDataFromFile. The raw data functions: \texttt{getWQPData}, \texttt{retrieveNWISqwData}, \texttt{retrieveWQPqwData}, \texttt{getWQPData} will not sum constituents, but leave them in their individual columns. 
 
 For example, we might know the value for dp on 5/30/2005, but we don't want to put it in the table because under the rules of this data set, we are not supposed to add it in to the values in 2005.
 
@@ -890,18 +890,17 @@ Tables \ref{tab:dataRetrievalFunctions1} and \ref{tab:dataRetrievalMisc} summari
 \multicolumn{1}{c}{\textbf{\textsf{Function Name}}} &
 \multicolumn{1}{c}{\textbf{\textsf{Description}}} \\ [0pt]
   \hline
-  Daily & \texttt{retrieveNWISData} & Raw USGS daily data \\ 
+  Daily & \texttt{retrieveNWISdvData} & Raw USGS daily data \\ 
   [5pt]Daily\tnote{1} & \texttt{getDVData} & USGS daily values \\ 
   [5pt]Daily\tnote{1} & \texttt{getDailyDataFromFile} & User generated daily data \\ 
   [5pt]Sample & \texttt{retrieveNWISqwData} & Raw USGS water quality data \\
-  [5pt]Sample & \texttt{getRawQWData} & Raw Water Quality Data Portal data \\ 
+  [5pt]Sample & \texttt{retrieveWQPqwData} & Raw Water Quality Data Portal data \\ 
   [5pt]Sample & \texttt{getQWDataFromFile} & Raw user generated water quality data \\ 
-  [5pt]Sample & \texttt{getQWData} & USGS Water Quality Portal data \\
   [5pt]Sample & \texttt{getWQPData} & General Water Quality Portal\\
   [5pt]Sample\tnote{1} & \texttt{getSampleData} & USGS water quality data\\
   [5pt]Sample\tnote{1} & \texttt{getSTORETSampleData} & STORET Water Quality Data Portal data \\
   [5pt]Sample\tnote{1} & \texttt{getSampleDataFromFile} & User generated sample data \\ 
-  [5pt]Unit & \texttt{retrieveUnitNWISData} & Raw USGS instantaneous data \\
+  [5pt]Unit & \texttt{retrieveNWISunitData} & Raw USGS instantaneous data \\
   [5pt]Information\tnote{1} & \texttt{getMetaData} & USGS station and parameter code information \\ 
   [5pt]Information & \texttt{getParameterInfo} & USGS parameter code information \\ 
   [5pt]Information & \texttt{getSiteFileData} & USGS station information \\ 
